# data-eng-projeto-final

./: MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
output/output/relatorio_pedidos/: part-00000-dbdd824d-314e-4d3b-8998-4c029bcf1182-c000.snappy.parquet
src/sales_report/business/: report_generator.py
src/sales_report/config/: settings.py
src/sales_report/io/: data_io.py  schemas.py
src/sales_report/orchestration/: pipeline.py
src/sales_report/spark/: session_manager.py
tests/: test_report_generator.py
