[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-report"
version = "0.1.0"
description = "Relatorio em PySpark para pedidos 2025 com pagamentos recusados e legitimos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "pytest>=7.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
